# CrimsonDesert-UltimateModsManager

./: .gitignore  README.md  cdmm.spec  cdumm.spec  push_changes.sh  pyproject.toml
scripts/: build.py
src/cdmm/: main.py
src/cdmm/archive/: hashlittle.py  papgt_manager.py  transactional_io.py
src/cdmm/asi/: asi_manager.py
src/cdmm/engine/: apply_engine.py  conflict_detector.py  delta_engine.py  import_handler.py  mod_manager.py  snapshot_manager.py  test_mod_checker.py
src/cdmm/gui/: asi_panel.py  bug_report.py  conflict_view.py  import_widget.py  main_window.py  mod_list_model.py  progress_dialog.py  setup_dialog.py  test_mod_dialog.py  workers.py
src/cdmm/storage/: config.py  database.py  game_finder.py
src/cdumm/: __init__.py  __init__.py.orig  i18n.py  main.py
src/cdumm/archive/: overlay_builder.py  papgt_manager.py  pathc_handler.py  paz_parse.py  paz_repack.py  transactional_io.py
src/cdumm/asi/: asi_manager.py
src/cdumm/engine/: activity_log.py  apply_engine.py  binary_search.py  crimson_browser_handler.py  delta_engine.py  import_handler.py  json_patch_handler.py  mod_health_check.py  mod_manager.py  snapshot_manager.py  update_checker.py  version_detector.py
src/cdumm/gui/: activity_panel.py  asi_panel.py  binary_search_dialog.py  changelog.py  (+10 more)
tests/: conftest.py  test_apply_engine.py  test_asi_manager.py  test_conflict_detector.py  test_database.py  test_delta_engine.py  test_format_parsers.py  test_game_finder.py  test_import_handler.py  test_mod_manager.py  test_snapshot_manager.py  test_test_mod_checker.py  test_transactional_io.py
(+9 files in other folders)
